--- a/ebay/Areas/Public/Views/Cart/Index.cshtml
+++ b/ebay/Areas/Public/Views/Cart/Index.cshtml
@@ -98,8 +98,8 @@ else
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-2 offset-md-5">
-                            <button class="btn btn-primary border-0 bg-gradient w-100 btn-sm py-2">Proceed
+                        <div class="col-md-3 offset-md-5">
+                            <button class="btn btn-secondary border-0 bg-gradient w-75">Proceed
                                 to checkout</button>
                         </div>
                     </div>
