--- a/ebay/Areas/Public/Views/Public/CustomerReview.cshtml
+++ b/ebay/Areas/Public/Views/Public/CustomerReview.cshtml
@@ -10,6 +10,7 @@
 
     .star-rating .fa-star {
         color: rgb(198, 198, 0);
+        text-shadow: 0 0 3px #000;
     }
 </style>
 <div class="container">
