--- a/ebay/Areas/Admin/Views/OrderManagement/Index.cshtml
+++ b/ebay/Areas/Admin/Views/OrderManagement/Index.cshtml
@@ -158,7 +158,7 @@
                                                     </form>
                                                 </div>
                                                 <div class="col-3">
-                                                    <button type="button" class="btn btn-danger btn-sm" style="width: 75px;"
+                                                    <button  class="btn btn-danger btn-sm" style="width: 75px;"
                                                         data-bs-toggle="modal" data-bs-target="#exampleModal-@item.id-@ebay.Constants.OrderStatusConstants.Cancelled">
                                                         cancel
                                                     </button>
@@ -214,7 +214,7 @@
                                                             <input type="hidden" name="itemid" value="@item.id">
                                                             <input type="hidden" name="orderstatus"
                                                                 value="@ebay.Constants.OrderStatusConstants.Cancelled">
-                                                            <button type="button" class="btn btn-primary">
+                                                            <button  class="btn btn-primary">
                                                                 Yes,Cancel
                                                             </button>
                                                         </form>
