--- a/ebay/Areas/Public/Views/Profile/Myorder.cshtml
+++ b/ebay/Areas/Public/Views/Profile/Myorder.cshtml
@@ -82,7 +82,7 @@
                                                 <form method="post" asp-action="CancelOrder" asp-controller="Cart">
                                                     <input type="hidden" name="orderId" value="@data.Order_id">
                                                     <input type="hidden" name="orderItemId" value="@data.id">
-                                                    <button type="button" class="btn btn-primary">
+                                                    <button  class="btn btn-primary">
                                                         Delete
                                                     </button>
                                                 </form>
