--- a/ebay/Areas/Public/Views/Public/Detail.cshtml
+++ b/ebay/Areas/Public/Views/Public/Detail.cshtml
@@ -1,3 +1,7 @@
+@using ebay.Provider.Interface
+@inject ICurrentUserProvider _currentUserProvider
+@* var currentUser = await _currentUserProvider.GetCurrentUser(); *@
+
 @{
     Layout = "_publicLayout";
 }
@@ -7,6 +11,7 @@
         line-height: 32px;
         font-size: 1.20em;
     }
+
     .star-rating .fa-star {
         color: rgb(198, 198, 0);
         text-shadow: 0 0 3px #000;
@@ -97,7 +102,8 @@
                         </div>
                         <div class="row ">
                             <div class="star-rating">
-                                <a tabindex="0" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="bottom"
+                                <a tabindex="0" data-bs-container="body" data-bs-toggle="popover"
+                                    data-bs-trigger="focus" data-bs-placement="bottom"
                                     data-bs-content="@Model.AverageReview out of 5">
                                     <span class="text-muted">@Model.AverageReview &nbsp </span>
                                     <span class="fa fa-star-o" data-rating="1"></span>
@@ -108,7 +114,9 @@
                                     <input type="hidden" name="AverageReview" class="rating-value"
                                         value="@Model.AverageReview">
                                 </a>
-                                <a class="link-primary" asp-route-ProductId="@Model.Product_id" asp-action="CustomerReview" asp-controller="Public" asp-area="Public" style="text-decoration: none;">&nbsp @Model.Reviews.Count() rating</a>
+                                <a class="link-primary" asp-route-ProductId="@Model.Product_id"
+                                    asp-action="CustomerReview" asp-controller="Public" asp-area="Public"
+                                    style="text-decoration: none;">&nbsp @Model.Reviews.Count() rating</a>
                             </div>
                         </div>
                         <hr>
@@ -155,22 +163,60 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-12 col-md-6 pb-1">
-                                <button type="submit"
-                                    class="btn btn-secondary bg-gradient btn-sm  w-50 py-2 text-uppercase fw-semibold">
-                                    Add to Cart
-                                </button>
-                            </div>
-                            <div class="col-12 col-md-6 pb-1">
-                                
-                                <a type="submit" asp-action="Checkout" asp-route-ProductId="@Model.Product_id" asp-route-Quantity="@Model.Quantity" asp-controller="Cart"
-                                    class="btn btn-buy bg-gradient btn-sm  w-80 py-2 text-uppercase fw-semibold"
-                                    style="position:relative; right:50%;">
-                                    Buy Now
-                                </a>
-                            </div>
-                        </div>
+                        @{
+                            var currentUser = await _currentUserProvider.GetCurrentUser();
+                            if (currentUser != null)
+                            {
+
+
+                                if (currentUser.UserType == "Admin")
+                                {
+                                    <div class="row">
+                                        <div class="col-12  text-center col-md-6 pb-1">
+                                            <button disabled type="submit"
+                                                class="btn btn-secondary bg-gradient btn-sm  w-50 py-2 text-uppercase fw-semibold">
+                                                Add to Cart
+                                            </button>
+                                        </div>
+                                        <div class="col-12 col-md-6 pb-1">
+
+                                            @* <a type="submit" asp-action="Checkout" asp-route-ProductId="@Model.Product_id"
+                                asp-route-Quantity="@Model.Quantity" asp-controller="Cart"
+                                class="btn btn-buy bg-gradient btn-sm w-80 py-2 text-uppercase fw-semibold"
+                                style="position:relative; right:50%;">
+                                Buy Now
+                                </a> *@
+                                            <button disabled type="submit"
+                                                class="btn btn-secondary bg-gradient btn-sm  w-50 py-2 text-uppercase fw-semibold">
+                                                Buy Now
+                                            </button>
+                                        </div>
+                                    </div>
+                                }
+                            }
+                            else
+                            {
+                                <div class="row">
+                                    <div class="col-12 col-md-6 pb-1">
+                                        <button type="submit"
+                                            class="btn btn-secondary bg-gradient btn-sm  w-50 py-2 text-uppercase fw-semibold">
+                                            Add to Cart
+                                        </button>
+                                    </div>
+                                    <div class="col-12 col-md-6 pb-1">
+
+                                        <a type="submit" asp-action="Checkout" asp-route-ProductId="@Model.Product_id"
+                                            asp-route-Quantity="@Model.Quantity" asp-controller="Cart"
+                                            class="btn btn-buy bg-gradient btn-sm  w-80 py-2 text-uppercase fw-semibold"
+                                            style="position:relative; right:50%;">
+                                            Buy Now
+                                        </a>
+                                    </div>
+                                </div>
+
+                            }
+                        }
+
                     </div>
 
                 </div>
@@ -273,7 +319,7 @@
 
 
 
-                                    var SetRatingStar = function () {
+                                            var SetRatingStar = function () {
             return $star_rating.each(function () {
                 if (parseInt($star_rating.siblings('input.rating-value').val()) >= parseInt($(this).data('rating'))) {
                     return $(this).removeClass('fa-star-o').addClass('fa-star');
