--- a/ebay/Areas/Public/Views/Public/Detail.cshtml
+++ b/ebay/Areas/Public/Views/Public/Detail.cshtml
@@ -193,9 +193,30 @@
                                         </div>
                                     </div>
                                 }
+                                else
+                                {
+                                    <div class="row">
+                                        <div class="col-12 col-md-6 pb-1">
+                                            <button type="submit"
+                                                class="btn btn-secondary bg-gradient btn-sm  w-50 py-2 text-uppercase fw-semibold">
+                                                Add to Cart
+                                            </button>
+                                        </div>
+                                        <div class="col-12 col-md-6 pb-1">
+
+                                            <a type="submit" asp-action="Checkout" asp-route-ProductId="@Model.Product_id"
+                                                asp-route-Quantity="@Model.Quantity" asp-controller="Cart"
+                                                class="btn btn-buy bg-gradient btn-sm  w-80 py-2 text-uppercase fw-semibold"
+                                                style="position:relative; right:50%;">
+                                                Buy Now
+                                            </a>
+                                        </div>
+                                    </div>
+                                }
                             }
                             else
                             {
+
                                 <div class="row">
                                     <div class="col-12 col-md-6 pb-1">
                                         <button type="submit"
@@ -319,7 +340,7 @@
 
 
 
-                                            var SetRatingStar = function () {
+                                                var SetRatingStar = function () {
             return $star_rating.each(function () {
                 if (parseInt($star_rating.siblings('input.rating-value').val()) >= parseInt($(this).data('rating'))) {
                     return $(this).removeClass('fa-star-o').addClass('fa-star');
